# Quantum-kernel-regression-pipeline-for-bandgap-using-tabular-features

./: pyproject.toml  requirements.txt
configs/: bandgap_qsvc.yaml  toxicity_krr.yaml
data/: qm9_small.csv  tox21_single.csv
runs/bandgap/: results.json
scripts/: clean_qm9_csv.py  train_bandgap.py  train_toxicity.py
src/qegl/: __init__.py  featurize.py  metrics.py  utils.py
src/qegl/data/: qm9.py  tox21.py
src/qegl/models/: classical_baselines.py  cnn_baseline.py  gnn_baselines.py
src/qegl/quantum/: encoders.py  qkernels.py
src/qegl_biomaterials.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
