[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "qegl-biomaterials"
version = "0.1.0"
description = "Quantum Enhanced Graph Learning for Molecular Design in Biomaterials"
readme = "README.md"
requires-python = ">=3.10,<3.12"
authors = [{name="Your Name"}]
license = {text="MIT"}

[project.urls]
homepage = "https://example.com"
repository = "https://example.com/repo"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["qegl*"]
exclude = []
